# fox51

./: .gitignore  README.md  pyproject.toml
config/: backtest.yaml
ml/: __init__.py
ml/backtest/: metrics.py  report.py  runner.py
ml/betting/: devig.py  kelly.py
ml/features/: build.py  team_stats.py
ml/ingest/: nba_games.py  nba_util.py  odds.py  team_stats.py
ml/models/: elo.py
scripts/: generate_sample_data.py
tests/: test_betting.py  test_elo.py  test_team_stats.py
